# ====================================================================================== #
[tool.poetry]
name = "deap-er"
version = "0.2.0"
description = "DEAP port to Python 3.10"
authors = ["Mattias Aabmets <mattias.aabmets@gmail.com>"]
license = "MIT License"
keywords = [
    "deap",
    "evolutionary algorithms",
    "genetic algorithms",
    "genetic programming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
include = [
    "deap_er",
    "deap_er.*",
    "deap_er.*.*"
]
build = "build.py"


# ====================================================================================== #
[tool.poetry.urls]
"Repository" = "https://github.com/aabmets/deap-er"
"Documentation" = "https://deap-er.readthedocs.io"


# ====================================================================================== #
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
Cython = "^0.29.30"


# ====================================================================================== #
[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
black = "^22.3.0"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"


# ====================================================================================== #
#[tool.poetry.build]
#generate-setup-file = false
#script = "build.py"


# ====================================================================================== #
[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=62.3.3",
    "wheel>=0.37.1",
    "Cython>=0.29.30"
]

# ==================================================================================== #
[tool.pytest.ini_options]
cache_dir = ".cache"
testpaths = ["tests"]
console_output_style = "count"
filterwarnings = ["ignore::DeprecationWarning"]
